Add api for Game Servers